ci: ускорен docker workflow без qemu-сборки jar